<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_trajectory_traffic_rule_filter_visualizer</name>
  <version>0.1.0</version>
  <description>Visualizer for amber light passing logic</description>
  <maintainer email="mclement@example.com">mclement</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>opencv</depend>
  <depend>autoware_boundary_departure_checker</depend>
  <depend>autoware_trajectory_traffic_rule_filter</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
