<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>driving_environment_analyzer</name>
  <version>0.1.0</version>
  <description>The driving_environment_analyzer package</description>

  <maintainer email="satoshi.ota@tier4.jp">Satoshi Ota</maintainer>

  <license>Apache License 2.0</license>

  <author email="satoshi.ota@tier4.jp">Satoshi Ota</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <depend>autoware_adapi_v1_msgs</depend>
  <depend>autoware_auto_perception_msgs</depend>
  <depend>autoware_auto_planning_msgs</depend>
  <depend>autoware_auto_tf2</depend>
  <depend>autoware_auto_vehicle_msgs</depend>
  <depend>autoware_perception_msgs</depend>
  <depend>behavior_path_planner_common</depend>
  <depend>geometry_msgs</depend>
  <depend>interpolation</depend>
  <depend>lane_departure_checker</depend>
  <depend>lanelet2_extension</depend>
  <depend>libboost-dev</depend>
  <depend>motion_utils</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>route_handler</depend>
  <depend>sensor_msgs</depend>
  <depend>signal_processing</depend>
  <depend>tf2</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tier4_autoware_utils</depend>
  <depend>tier4_planning_msgs</depend>
  <depend>vehicle_info_util</depend>
  <depend>visualization_msgs</depend>

  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
