<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>driving_environment_analyzer</name>
  <version>0.1.0</version>
  <description>The driving_environment_analyzer package</description>

  <maintainer email="satoshi.ota@tier4.jp">Satoshi Ota</maintainer>

  <license>Apache License 2.0</license>

  <author email="satoshi.ota@tier4.jp">Satoshi Ota</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <depend>autoware_adapi_v1_msgs</depend>
  <depend>autoware_behavior_path_planner_common</depend>
  <depend>autoware_lane_departure_checker</depend>
  <depend>autoware_motion_utils</depend>
  <depend>autoware_perception_msgs</depend>
  <depend>autoware_planning_msgs</depend>
  <depend>autoware_route_handler</depend>
  <depend>autoware_universe_utils</depend>
  <depend>autoware_vehicle_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>interpolation</depend>
  <depend>autoware_lanelet2_extension</depend>
  <depend>libboost-dev</depend>
  <depend>libqt5-core</depend>
  <depend>libqt5-gui</depend>
  <depend>libqt5-widgets</depend>
  <depend>qtbase5-dev</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rosbag2_cpp</depend>
  <depend>rviz_common</depend>
  <depend>rviz_default_plugins</depend>
  <depend>sensor_msgs</depend>
  <depend>signal_processing</depend>
  <depend>tf2</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tier4_planning_msgs</depend>
  <depend>tier4_rtc_msgs</depend>
  <depend>visualization_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rviz plugin="${prefix}/plugins/plugin_description.xml"/>
  </export>
</package>
