<?xml version="1.0"?>
<package format="2">
  <name>autoware_sample_vehicle_description</name>
  <version>0.1.0</version>
  <description>The autoware_sample_vehicle_description package</description>

  <maintainer email="temkei.kem@tier4.jp">Temkei Kem</maintainer>
  <maintainer email="kosuke.takeuchi@tier4.jp">Kosuke Takeuchi</maintainer>
  <maintainer email="takayuki.murooka@tier4.jp">Takayuki Murooka</maintainer>
  <license>Apache2</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
