<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_lanelet2_map_utils</name>
  <version>0.6.0</version>
  <description>The autoware_lanelet2_map_utils package</description>
  <maintainer email="yamato.ando@tier4.jp">Yamato Ando</maintainer>
  <maintainer email="masahiro.sakamoto@tier4.jp">Masahiro Sakamoto</maintainer>
  <maintainer email="anh.nguyen.2@tier4.jp">NGUYEN Viet Anh</maintainer>
  <maintainer email="taiki.yamada@tier4.jp">Taiki Yamada</maintainer>
  <license>Apache License 2.0</license>
  <author email="ryohsuke.mitsudome@tier4.jp">Ryohsuke Mitsudome</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <depend>autoware_lanelet2_extension</depend>
  <depend>libpcl-all-dev</depend>
  <depend>rclcpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
